changed for loop

--- a/apps/index.html
+++ b/apps/index.html
@@ -8,14 +8,16 @@
     <script src="js/jquery-3.7.1.min.js"></script>
   </head>
   <body>
-    <h1>Dogs Variety</h1>
+    <div id="maindiv">
+    <h1>Dogs Breeds</h1>
     <label for="dog-list">Select the breed</label>
     <select name="dog-list" id="dog-list"></select>
     <button id="getImg">Get image of dog</button>
     <div id="load-div"></div>
     <div id="animals">
-      <img/>
+      <img id="img">
     </div>
+  </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
