--- a/apps/index.html
+++ b/apps/index.html
@@ -12,9 +12,10 @@
     <h1>Dogs Breeds</h1>
     <label for="dog-list">Select the breed</label>
     <select name="dog-list" id="dog-list"></select>
-    <button id="getImg">Get image of dog</button>
-    <div id="load-div"></div>
-    <div id="animals">
+    <div id="loading">loading...</div>
+    <button id="button">Get image of dog</button>
+    <div id="load"></div>
+    <div>
       <img id="img">
     </div>
   </div>
